--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
   <title>Widgets and Dodads</title>
-
+  <script data-ad-client="ca-pub-9704581944780102" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
