--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </style>
 
   <script id="insert"></script>
-  <script type="text/javascript" src="widgets.js"/>
+  <script type="text/javascript" src="widgets.js"></script>
 
 </head>
 <body>
