--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <li>Add save/load buttons that use localStorage.setItem() and localStorage.getItem()</li>
         <li>Check the Bootstrap 3 checkbox in the upper left and change the &lt;button&gt; elements to use &lt;div class="btn btn-primary"&gt; instead</li>
     </ul>
-
+<script type="text/javascript" src="widgets.js"></script>
  <script>
     // tell the embed parent frame the height of the content
     if (window.parent && window.parent.parent){
