Fixed split out

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
     <table>
         <tbody>
             <tr>
+              <td><h3>Widgeteer Speed: <span id="widgeteer-speed">0</span> /sec</h3></td>
+            </tr>
+            <tr>
                 <td><h1>Widgets: <span id="widget-count">0</span></h1></td>
                 <td><span></span></td>
                 <td><h1>Dodads: <span id="dodad-count">0</span></h1></td>
@@ -59,7 +62,6 @@
         <li>Add save/load buttons that use localStorage.setItem() and localStorage.getItem()</li>
         <li>Check the Bootstrap 3 checkbox in the upper left and change the &lt;button&gt; elements to use &lt;div class="btn btn-primary"&gt; instead</li>
     </ul>
-<script type="text/javascript" src="widgets.js"></script>
  <script>
     // tell the embed parent frame the height of the content
     if (window.parent && window.parent.parent){
