Set width to 100%

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <script type="text/javascript" src="widgets.js"></script>
 
 </head>
-<body>
+<body style="width: 100%;">
   <div ><p>Widgeteer Speed: <span id="widgeteer-speed">0</span> /sec</p></td>
         <td style="width: 30%;"></td>
   </div>
