--- a/index.html
+++ b/index.html
@@ -20,67 +20,51 @@
 
 </head>
 <body style="width: 100%;">
-  <div ><p>Widgeteer Speed: <span id="widgeteer-speed">0</span> /sec</p></td>
-        <td style="width: 30%;"></td>
-  </div>
-  <div style="float: left;
-  height: 5.5em;
-  width: 30%;
-  padding: 0 0px;">
-    <p>Novice Widgeteers: Owned: <span style="height:auto;" id="novice-widgeteer-count">0</span> Speed: 
-      <span style="height:auto;" id="novice-widgeteer-speed">0</span> </p>
-    <p>Master Widgeteers: Owned: <span style="height:auto;" id="master-widgeteer-count">0</span> Speed: 
-        <span style="height:auto;" id="master-widgeteer-speed">0</span> </p>
-    <p>Expert Widgeteers: Owned: <span style="height:auto;" id="expert-widgeteer-count">0</span> Speed: 
-          <span style="height:auto;" id="expert-widgeteer-speed">0</span> </p>
-  </div>
-  <div style="float: left;
-  height: 5.5em;
-  width: 30%;
-  padding: 0 0px;">
-    <p>Novice Dodadeers: Owned: <span style="height:auto;" id="novice-dodadeer-count">0</span> Speed: 
-      <span style="height:auto;" id="novice-widgeteer-speed">0</span> </p>
-    <p>Master Dodadeers: Owned: <span style="height:auto;" id="master-dodadeer-count">0</span> Speed: 
-        <span style="height:auto;" id="master-widgeteer-speed">0</span> </p>
-    <p>Expert Dodadeers: Owned: <span style="height:auto;" id="expert-dodadeer-count">0</span> Speed: 
-          <span style="height:auto;" id="expert-widgeteer-speed">0</span> </p>
-  </div>
-  <div style="float: left;
-  height: 5.5em;
-  width: 40%;
-  padding: 0 0px;"></div>
- <div>
-            <table>
-            <tr>
-                <td><h1>Widgets: <span id="widget-count">0</span></h1></td>
-                <td><h1>Dodads: <span id="dodad-count">0</span></h1></td>
-            </tr>
-            <tr>
-                <td><button id="produce-widget">Produce Widget</button></td>
-                <td><button id="produce-dodad">Produce Dodad</button></td>
-            </tr>
-            <tr>
-                <td><h2>Store:</h2></td>
-            </tr>
-            <tr>
-                <td><button id="novice-widgeteer" disabled="">Hire Novice Widgeteer - 100</button></td>
-                <td><button id="novice-dodadeer" disabled="">Hire Novice Dodadeer - 100</button></td>
-                <td>Owned: <span id="novice-dodadeer-count">0</span></td>
-            </tr>
-            <tr>
-                <td><button id="master-widgeteer" disabled="">Hire Master Widgeteer - 250</button></td>
-                <td><button id="master-dodadeer" disabled="">Hire Master Dodadeer - 250</button></td>
-                <td>Owned: <span id="master-dodadeer-count">0</span></td>
-            </tr>
-            <tr>
-              <td><button id="expert-widgeteer" disabled="">Hire Expert Widgeteer - 2500</button></td>
-              <td><button id="expert-dodadeer" disabled="">Hire Expert Dodadeer - 2500</button></td>
-              <td>Owned: <span id="expert-dodadeer-count">0</span></td>
-            </tr>
-        </tbody>
-    </table>
-  </div>
 
+  <div style="float: left;
+  height: 5.5em;
+  width: 45%;
+  padding: 0 5px;
+  ">
+  <h3 style="text-align: center;">Widgeteer Speed: <span id="widgeteer-speed">0</span> /sec</h3>
+    <h4 style="height: 1.2em; margin: 0; text-align: center;">Widgeteers</h4>
+    <p>Novice: Owned: <span style="height:auto;" id="novice-widgeteer-count">0</span> Speed: 
+      <span style="height:auto;" id="novice-widgeteer-speed">0</span>  /sec</p>
+    <p>Master: Owned: <span style="height:auto;" id="master-widgeteer-count">0</span> Speed: 
+        <span style="height:auto;" id="master-widgeteer-speed">0</span> /sec</p>
+    <p>Expert: Owned: <span style="height:auto;" id="expert-widgeteer-count">0</span> Speed: 
+          <span style="height:auto;" id="expert-widgeteer-speed">0</span> /sec</p>
+
+          <h1>Widgets: <span id="widget-count">0</span></h1>
+          <button id="produce-widget">Produce Widget</button><br><br>
+          <button id="novice-widgeteer" disabled="">Hire Novice Widgeteer - 100</button><br>
+          <button id="master-widgeteer" disabled="">Hire Master Widgeteer - 250</button><br>
+          <button id="expert-widgeteer" disabled="">Hire Expert Widgeteer - 2500</button><br>
+  </div>
+  <div style="float: left;
+  height: 5.5em;
+  width: 5%;
+  padding: 0 5px;"></div>
+  <div style="float: left;
+  height: 5.5em;
+  width: 45%;
+  padding: 0 5px;">
+    <h3 style="text-align: center;">Dodadeer Speed: <span id="dodadeer-speed">0</span> /10 sec</h3>
+    <h4 style="height: 1.2em; margin: 0; text-align: center;">Dodadeers</h4>
+    <p>Novice: Owned: <span style="height:auto;" id="novice-dodadeer-count">0</span> Speed: 
+      <span style="height:auto;" id="novice-widgeteer-speed">0</span> /10 sec</p>
+    <p>Master: Owned: <span style="height:auto;" id="master-dodadeer-count">0</span> Speed: 
+        <span style="height:auto;" id="master-widgeteer-speed">0</span> /10 sec</p>
+    <p>Expert: Owned: <span style="height:auto;" id="expert-dodadeer-count">0</span> Speed: 
+          <span style="height:auto;" id="expert-widgeteer-speed">0</span> /10 sec</p>
+
+          <h1>Dodads: <span id="dodad-count">0</span></h1>
+          <button id="produce-dodad">Produce Dodad</button><br><br>
+          <button id="novice-dodadeer" disabled="">Hire Novice Dodadeer - 100</button><br>
+          <button id="master-dodadeer" disabled="">Hire Master Dodadeer - 250</button><br>
+          <button id="expert-dodadeer" disabled="">Hire Expert Dodadeer - 2500</button><br>
+  </div>
+<!--<div>
     <h2>Coding exercises:</h2>
 
 
@@ -92,6 +76,7 @@
         <li>Add save/load buttons that use localStorage.setItem() and localStorage.getItem()</li>
         <li>Check the Bootstrap 3 checkbox in the upper left and change the &lt;button&gt; elements to use &lt;div class="btn btn-primary"&gt; instead</li>
     </ul>
+  </div> -->
  <script>
     // tell the embed parent frame the height of the content
     if (window.parent && window.parent.parent){
