--- a/index.html
+++ b/index.html
@@ -27,19 +27,16 @@
   padding: 0 5px;
   ">
   <h3 style="text-align: center;">Widgeteer Speed: <span id="widgeteer-speed">0</span> /sec</h3>
-    <h4 style="height: 1.2em; margin: 0; text-align: center;">Widgeteers</h4>
-    <p>Novice: Owned: <span style="height:auto;" id="novice-widgeteer-count">0</span> Speed: 
-      <span style="height:auto;" id="novice-widgeteer-speed">0</span>  /sec</p>
-    <p>Master: Owned: <span style="height:auto;" id="master-widgeteer-count">0</span> Speed: 
-        <span style="height:auto;" id="master-widgeteer-speed">0</span> /sec</p>
-    <p>Expert: Owned: <span style="height:auto;" id="expert-widgeteer-count">0</span> Speed: 
-          <span style="height:auto;" id="expert-widgeteer-speed">0</span> /sec</p>
-
           <h1>Widgets: <span id="widget-count">0</span></h1>
           <button id="produce-widget">Produce Widget</button><br><br>
-          <button id="novice-widgeteer" disabled="">Hire Novice Widgeteer - 100</button><br>
-          <button id="master-widgeteer" disabled="">Hire Master Widgeteer - 250</button><br>
-          <button id="expert-widgeteer" disabled="">Hire Expert Widgeteer - 2500</button><br>
+          <p style="font-size: large; font-weight: bold;">Hire Widgeteers</p>
+          <p>Novice <button id="novice-widgeteer-1" disabled="">1 - 100</button> <button id="novice-widgeteer-10" disabled="">10 - 1000</button>
+            Owned: <span style="height:auto;" id="novice-widgeteer-count">0</span> 
+            Speed: <span style="height:auto;" id="novice-widgeteer-speed">0</span>  /sec</p>
+            <p>Master <button id="master-widgeteer-1" disabled="">1 - 250</button> Owned: <span style="height:auto;" id="master-widgeteer-count">0</span> Speed: 
+              <span style="height:auto;" id="master-widgeteer-speed">0</span> /sec</p>
+          <p>Expert <button id="expert-widgeteer-1" disabled="">1 - 2500</button> Owned: <span style="height:auto;" id="expert-widgeteer-count">0</span> Speed: 
+            <span style="height:auto;" id="expert-widgeteer-speed">0</span> /sec</p>
   </div>
   <div style="float: left;
   height: 5.5em;
@@ -52,11 +49,11 @@
     <h3 style="text-align: center;">Dodadeer Speed: <span id="dodadeer-speed">0</span> /10 sec</h3>
     <h4 style="height: 1.2em; margin: 0; text-align: center;">Dodadeers</h4>
     <p>Novice: Owned: <span style="height:auto;" id="novice-dodadeer-count">0</span> Speed: 
-      <span style="height:auto;" id="novice-widgeteer-speed">0</span> /10 sec</p>
+      <span style="height:auto;" id="novice-dodadeer-speed">0</span> /10 sec</p>
     <p>Master: Owned: <span style="height:auto;" id="master-dodadeer-count">0</span> Speed: 
-        <span style="height:auto;" id="master-widgeteer-speed">0</span> /10 sec</p>
+        <span style="height:auto;" id="master-dodadeer-speed">0</span> /10 sec</p>
     <p>Expert: Owned: <span style="height:auto;" id="expert-dodadeer-count">0</span> Speed: 
-          <span style="height:auto;" id="expert-widgeteer-speed">0</span> /10 sec</p>
+          <span style="height:auto;" id="expert-dodadeer-speed">0</span> /10 sec</p>
 
           <h1>Dodads: <span id="dodad-count">0</span></h1>
           <button id="produce-dodad">Produce Dodad</button><br><br>
