--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
 </head>
-<body style="width: 100%;">
+<body style="width: 100%; touch-action: manipulation;">
 
   <div class="row">
     <div class="col s12">
