--- a/public/index.html
+++ b/public/index.html
@@ -41,9 +41,12 @@
             <h1>Widgets: <span id="widget-count">0</span></h1>
             <button id="produce-widget">Produce Widget</button><br><br>
             <p style="font-size: large; font-weight: bold;">Hire Widgeteers</p>
-            <p>Novice <button id="novice-widgeteer-1" disabled="">1 - 100</button> <button id="novice-widgeteer-10" disabled="">10 - 1593</button>
-              Owned: <span style="height:auto;" id="novice-widgeteer-count">0</span> 
-              Speed: <span style="height:auto;" id="novice-widgeteer-speed">0</span>  /sec</p>
+            <div class="labelDiv"> Novice </div><div class="oneButtonDiv"><button id="novice-widgeteer-1" disabled="">1 - 100</button></div> <div class="tenButtonDiv"><button id="novice-widgeteer-10" disabled="">10 - 1593</button></div>
+              <div class="statsDiv">Owned: <span style="height:auto;" id="novice-widgeteer-count">0</span> 
+              Speed: <span style="height:auto;" id="novice-widgeteer-speed">0</span>  /sec</div>
+              <p>Intermediate <button id="intermediate-widgeteer-1" disabled="">1 - 100</button> <button id="intermediate-widgeteer-10" disabled="">10 - 1593</button>
+                Owned: <span style="height:auto;" id="intermediate-widgeteer-count">0</span> 
+                Speed: <span style="height:auto;" id="intermediate-widgeteer-speed">0</span>  /sec</p>
               <p>Master <button id="master-widgeteer-1" disabled="">1 - 500</button> <button id="master-widgeteer-10" disabled="">10 - 7969</button> Owned: <span style="height:auto;" id="master-widgeteer-count">0</span> Speed: 
                 <span style="height:auto;" id="master-widgeteer-speed">0</span> /sec</p>
             <p>Expert <button id="expert-widgeteer-1" disabled="">1 - 2500</button> <button id="expert-widgeteer-10" disabled="">1 - 39843</button> Owned: <span style="height:auto;" id="expert-widgeteer-count">0</span> Speed: 
