--- a/public/index.html
+++ b/public/index.html
@@ -43,30 +43,29 @@
             <p style="font-size: large; font-weight: bold;">Hire Widgeteers</p>
             <div class="labelDiv"> Novice </div><div class="oneButtonDiv"><button id="novice-widgeteer-1" disabled="">1 - 100</button></div> <div class="tenButtonDiv"><button id="novice-widgeteer-10" disabled="">10 - 1593</button></div>
               <div class="statsDiv">Owned: <span style="height:auto;" id="novice-widgeteer-count">0</span> 
-              Speed: <span style="height:auto;" id="novice-widgeteer-speed">0</span>  /sec</div>
-              <p>Intermediate <button id="intermediate-widgeteer-1" disabled="">1 - 100</button> <button id="intermediate-widgeteer-10" disabled="">10 - 1593</button>
-                Owned: <span style="height:auto;" id="intermediate-widgeteer-count">0</span> 
-                Speed: <span style="height:auto;" id="intermediate-widgeteer-speed">0</span>  /sec</p>
-              <p>Master <button id="master-widgeteer-1" disabled="">1 - 500</button> <button id="master-widgeteer-10" disabled="">10 - 7969</button> Owned: <span style="height:auto;" id="master-widgeteer-count">0</span> Speed: 
-                <span style="height:auto;" id="master-widgeteer-speed">0</span> /sec</p>
-            <p>Expert <button id="expert-widgeteer-1" disabled="">1 - 2500</button> <button id="expert-widgeteer-10" disabled="">1 - 39843</button> Owned: <span style="height:auto;" id="expert-widgeteer-count">0</span> Speed: 
-              <span style="height:auto;" id="expert-widgeteer-speed">0</span> /sec</p>
+                Speed: <span style="height:auto;" id="novice-widgeteer-speed">0</span>  /sec</div><br>
+            <br><div class="labelDiv"> Intermediate </div><div class="oneButtonDiv"><button id="intermediate-widgeteer-1" disabled="">1 - 100</button></div> <div class="tenButtonDiv"><button id="intermediate-widgeteer-10" disabled="">10 - 1593</button></div>
+              <div class="statsDiv">Owned: <span style="height:auto;" id="intermediate-widgeteer-count">0</span> 
+                Speed: <span style="height:auto;" id="intermediate-widgeteer-speed">0</span>  /sec</div><br>
+            <br><div class="labelDiv"> Master </div><div class="oneButtonDiv"><button id="master-widgeteer-1" disabled="">1 - 500</button></div> <div class="tenButtonDiv"><button id="master-widgeteer-10" disabled="">10 - 7969</button></div> 
+              <div class="statsDiv">Owned: <span style="height:auto;" id="master-widgeteer-count">0</span> 
+                Speed: <span style="height:auto;" id="master-widgeteer-speed">0</span> /sec</div><br>
+            <br><div class="labelDiv"> Expert </div><div class="oneButtonDiv"><button id="expert-widgeteer-1" disabled="">1 - 2500</button></div> <div class="tenButtonDiv"><button id="expert-widgeteer-10" disabled="">1 - 39843</button></div> 
+              <div class="statsDiv">Owned: <span style="height:auto;" id="expert-widgeteer-count">0</span> 
+                Speed: <span style="height:auto;" id="expert-widgeteer-speed">0</span> /sec</div><br>
     </div>
     <div id="dodads">
       <h3 style="text-align: center;">Dodadeer Speed: <span id="dodadeer-speed">0</span> /10 sec</h3>
       <h4 style="height: 1.2em; margin: 0; text-align: center;">Dodadeers</h4>
-      <p>Novice: Owned: <span style="height:auto;" id="novice-dodadeer-count">0</span> Speed: 
-        <span style="height:auto;" id="novice-dodadeer-speed">0</span> /10 sec</p>
-      <p>Master: Owned: <span style="height:auto;" id="master-dodadeer-count">0</span> Speed: 
-          <span style="height:auto;" id="master-dodadeer-speed">0</span> /10 sec</p>
-      <p>Expert: Owned: <span style="height:auto;" id="expert-dodadeer-count">0</span> Speed: 
-            <span style="height:auto;" id="expert-dodadeer-speed">0</span> /10 sec</p>
+      <h1>Dodads: <span id="dodad-count">0</span></h1>
+      <button id="produce-dodad">Produce Dodad</button><br><br>
+      <br><div class="labelDiv"> Novice </div><div class="oneButtonDiv"><button id="novice-dodadeer-1" disabled="">1 - 100</button></div> <div class="tenButtonDiv"><button id="novice-dodadeer-10" disabled="">10 - 1593</button></div>
+        <div class="statsDiv">Owned: <span style="height:auto;" id="novice-dodadeer-count">0</span> 
+            Speed: <span style="height:auto;" id="novice-dodadeer-speed">0</span>  /10 sec</div><br>
+      <br><div class="labelDiv"> Intermediate </div><div class="oneButtonDiv"><button id="intermediate-dodadeer-1" disabled="">1 - 100</button></div> <div class="tenButtonDiv"><button id="intermediate-dodadeer-10" disabled="">10 - 1593</button></div>
+        <div class="statsDiv">Owned: <span style="height:auto;" id="intermediate-dodadeer-count">0</span> 
+            Speed: <span style="height:auto;" id="intermediate-dodadeer-speed">0</span>  /10 sec</div><br>
 
-            <h1>Dodads: <span id="dodad-count">0</span></h1>
-            <button id="produce-dodad">Produce Dodad</button><br><br>
-            <button id="novice-dodadeer" disabled="">Hire Novice Dodadeer - 100</button><br>
-            <button id="master-dodadeer" disabled="">Hire Master Dodadeer - 250</button><br>
-            <button id="expert-dodadeer" disabled="">Hire Expert Dodadeer - 2500</button><br>
     </div>
   </div>
 <!--<div>
